# ChangeLog for kde-base/kbugbuster
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/kde-base/kbugbuster/ChangeLog,v 1.92 2009/01/14 14:12:52 alexxy Exp $

  14 Jan 2009; Alexey Shvetsov <alexxy@gentoo.org> -kbugbuster-4.1.2.ebuild,
  -kbugbuster-4.1.3.ebuild:
  Drop KDE 4.1.2 and 4.1.3

*kbugbuster-4.1.4 (13 Jan 2009)

  13 Jan 2009; Alexey Shvetsov <alexxy@gentoo.org> +kbugbuster-4.1.4.ebuild:
  Bump to 4.1.4

  15 Nov 2008; Mike Frysinger <vapier@gentoo.org> kbugbuster-4.1.3.ebuild:
  Add ppc/ppc64 love #244306.

*kbugbuster-4.1.3 (08 Nov 2008)

  08 Nov 2008; Tomas Chvatal <scarabeus@gentoo.org>
  +kbugbuster-4.1.3.ebuild:
  Version bump.

  21 Oct 2008; Jorge Manuel B. S. Vicetto <jmbsvicetto@gentoo.org>
  -kbugbuster-4.0.4.ebuild, -kbugbuster-4.0.5.ebuild:
  Removing KDE-4.0.X packages now that 4.1.2 was put in the tree.

*kbugbuster-4.1.2 (02 Oct 2008)

  02 Oct 2008; Jorge Manuel B. S. Vicetto <jmbsvicetto@gentoo.org>
  metadata.xml, +kbugbuster-4.1.2.ebuild:
  Add kde-4.1.2 into the tree from the kde-testing overlay.

*kbugbuster-3.5.10 (13 Sep 2008)

  13 Sep 2008; Carsten Lohrke <carlo@gentoo.org> +kbugbuster-3.5.10.ebuild:
  Version bump.

  14 Jun 2008; nixnut <nixnut@gentoo.org> kbugbuster-3.5.9.ebuild:
  Stable on ppc wrt bug 221063

  08 Jun 2008; Raúl Porcel <armin76@gentoo.org> kbugbuster-3.5.9.ebuild:
  alpha/sparc stable wrt #221063

  08 Jun 2008; Jeroen Roovers <jer@gentoo.org> kbugbuster-3.5.9.ebuild:
  Stable for HPPA (bug #221063).

  07 Jun 2008; Tobias Heinlein <keytoaster@gentoo.org>
  -kbugbuster-3.5.8.ebuild, -kbugbuster-4.0.2.ebuild,
  -kbugbuster-4.0.3.ebuild:
  Removed old versions.

*kbugbuster-4.0.5 (05 Jun 2008)

  05 Jun 2008; Tobias Heinlein <keytoaster@gentoo.org>
  +kbugbuster-4.0.5.ebuild:
  Added the KDE 4.0.5 version of kbugbuster.

  18 May 2008; Markus Meier <maekke@gentoo.org> kbugbuster-3.5.9.ebuild:
  amd64/x86 stable, bug #221063
