@@ -1,0 +1,12 @@
+# Copyright 1999-2009 Gentoo Foundation
+# Distributed under the terms of the GNU General Public License v2
+# $Header: /var/cvsroot/gentoo-x86/kde-base/kbugbuster/kbugbuster-4.2.0.ebuild,v 1.1 2009/01/27 19:18:01 alexxy Exp $
+
+EAPI="2"
+
+KMNAME="kdesdk"
+inherit kde4-meta
+
+DESCRIPTION="KBugBuster - A tool for checking and reporting KDE apps' bugs"
+KEYWORDS="~amd64 ~x86"
+IUSE="debug htmlhandbook"
